# ethercat-esi

./: Cargo.toml  LICENSE-MIT  README.md
examples/: basic.rs
src/: lib.rs  parser.rs  structs.rs
src/parser/: conversions.rs  mod.rs
tests/: parse-xml.rs
tests/fixtures/: Beckhoff_EK11xx.xml  C5-E-2-21.xml  Weidmueller_UR20_FBC.xml  Weidmueller_UR20_FBC_from_IgH.xml  Weidmueller_UR20_IO.xml
