[package]
name = "ethercat-esi"
description = "Handle EtherCAT Slave Information (ESI)"
version = "0.2.0"
authors = ["slowtec GmbH <post@slowtec.de>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["fieldbus", "ethercat", "industrial"]
homepage = "https://github.com/ethercat-rs/ethercat-esi"
repository = "https://github.com/ethercat-rs/ethercat-esi"
edition = "2021"
rust-verison = "1.73.0"

[dependencies]
ethercat-types = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"

[badges]
maintenance = { status = "actively-developed" }
